--- a/d00/ex01/mendeleiev.html
+++ b/d00/ex01/mendeleiev.html
@@ -373,7 +373,11 @@
           <p class="atom">Ba</p>
           <p class="atomic_number">56</p>
         </td>
-        <td/>
+        <td>
+          <p class="atomic_weight">174.9668</p>
+          <p class="atom">Lu</p>
+          <p class="atomic_number">71</p>
+        </td>
         <td>
           <p class="atomic_weight">178.49</p>
           <p class="atom">Hf</p>
@@ -461,7 +465,11 @@
           <p class="atom">Ra</p>
           <p class="atomic_number">88</p>
         </td>
-        <td/>
+        <td>
+          <p class="atomic_weight">(262)</p>
+          <p class="atom">Lr</p>
+          <p class="atomic_number">103</p>
+        </td>
         <td>
           <p class="atomic_weight">(261)</p>
           <p class="atom">Rf</p>
