--- a/d00/ex03/responsive.html
+++ b/d00/ex03/responsive.html
@@ -7,8 +7,10 @@
 </head>
 <body>
   <div>
-    <h1>Mendeleiev Table</h1>
-    <img src="chemistry.jpg"; height="200px"; width="200px">
+  	<div class="header">
+      <h1>Mendeleiev Table</h1>
+      <img src="chemistry.jpg"; height="200px"; width="200px">
+	</div>
     <table>
       <tr>
         <td>
