--- a/d00/ex00/basics.html
+++ b/d00/ex00/basics.html
@@ -44,6 +44,7 @@
         .copyright div{
             flex: none;
             height: 10px;
+			font-style: italic;
         }
     </style>
 </head>
