--- a/d00/ex04/menu.html
+++ b/d00/ex04/menu.html
@@ -11,20 +11,20 @@
     <li class="green"><a href="#">Menu 1</a>
       <ul class="level2">
         <li class="green"><a href="#">Sandwich</a>
-          <ul class="level3">
+          <!-- <ul class="level3">
             <li class="green"><a href="#">Meet ball</a></li>
             <li class="green"><a href="#">Vegtable</a></li>
-          </ul>
+          </ul> -->
         </li>
         <li class="green"><a href="#">Cake</a></li>
         <li class="green"><a href="#">Drink</a>
-          <ul class="level3">
+          <!-- <ul class="level3">
             <li class="green"><a href="#">Red wine</a></li>
             <li class="green"><a href="#">Coke</a></li>
             <li class="green"><a href="#">Water</a></li>
             <li class="green"><a href="#">Green Tea</a></li>
             <li class="green"><a href="#">Coffee</a></li>
-          </ul>
+          </ul> -->
         </li>
       </ul>
     </li>
